feat: add typed property getter from a map